Source/WebCore/html/HTMLMediaElement.cpp
@@ -4477,6 +4477,11 @@ bool HTMLMediaElement::mediaPlayerIsPaused() const
     return paused();
 }
 
+bool HTMLMediaElement::mediaPlayerIsLooping() const
+{
+    return loop();
+}
+
 HostWindow* HTMLMediaElement::mediaPlayerHostWindow()
 {
     return mediaPlayerOwningDocument()->view()->hostWindow();
